// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render api-SearchHitItem correctly 1`] = `
<article
  className="search-hit"
>
  <span
    aria-hidden="false"
    className="uu-invisible"
  >
    Søketreff.
  </span>
  <header>
    <SearchHitHeader
      headerTag="h2"
      provenance={
        Object {
          "code": "NASJONAL",
          "prefLabel": Object {
            "en": "National Building Block",
            "nb": "Nasjonal felleskomponent",
            "nn": "Nasjonal felleskomponent",
          },
          "uri": "http://data.brreg.no/datakatalog/provinens/nasjonal",
        }
      }
      publisher={
        Object {
          "id": "974760673",
        }
      }
      publisherItems={null}
      publisherLabel="Provider"
      theme={null}
      title="National Data Directory Search API"
      titleLink="/apis/32690443-e926-4e52-9988-dbac45085102"
    />
  </header>
  <p>
    <span
      aria-hidden="false"
      className="uu-invisible"
    >
      Beskrivelse av api,
    </span>
    Provides a basic search api against the National Data Directory of Norway
  </p>
  <div
    className="mb-2"
  >
    <strong>
      API that are not public
    </strong>
    <i
      className="fa fa-info-circle ml-2 fdk-color-cta2"
    />
  </div>
</article>
`;

exports[`should render api-SearchHitItem correctly with no props 1`] = `
<article
  className="search-hit"
>
  <span
    aria-hidden="false"
    className="uu-invisible"
  >
    Søketreff.
  </span>
</article>
`;

exports[`should render api-SearchHitItem with long description 1`] = `
<article
  className="search-hit"
>
  <span
    aria-hidden="false"
    className="uu-invisible"
  >
    Søketreff.
  </span>
  <header>
    <SearchHitHeader
      headerTag="h2"
      provenance={null}
      publisher={null}
      publisherItems={null}
      publisherLabel="Provider"
      theme={null}
      title="National Data Directory Search API"
      titleLink="/apis/32690443-e926-4e52-9988-dbac45085102"
    />
  </header>
  <p>
    <span
      aria-hidden="false"
      className="uu-invisible"
    >
      Beskrivelse av api,
    </span>
    It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as...
  </p>
</article>
`;
